--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.1",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.2",
     "nodemon": "^3.1.0"
   }
 }
