--- a/client/package.json
+++ b/client/package.json
@@ -14,14 +14,22 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@react-spring/web": "^9.7.3",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-intersection": "^0.2.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.9.0",
+    "framer-motion": "^11.0.24",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-firebaseui": "^6.0.0",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
@@ -32,6 +40,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react-error-overlay": "^6.0.9",
     "vite": "^5.1.4"
   }
 }
