--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
+    "nodemailer": "^6.9.13",
+    "nodemailer-sparkpost-transport": "^2.2.0",
     "nodemon": "^3.1.0"
   }
 }
