--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
@@ -23,20 +24,28 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.6.0",
     "framer-motion": "^11.0.24",
+    "html2canvas": "^1.4.1",
     "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
+    "react-content-loader": "^7.0.0",
     "react-dom": "^18.2.0",
+    "react-files": "^3.0.0",
     "react-firebaseui": "^6.0.0",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.4.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13",
+    "web-vitals": "^4.1.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
