--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "firebase": "^10.6.0",
     "framer-motion": "^11.0.24",
     "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "pdf-lib": "^1.17.1",
     "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
     "react-content-loader": "^7.0.0",
@@ -37,6 +39,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
