--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -37,6 +38,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.4.0",
     "react-query": "^3.39.3",
+    "react-rating": "^2.0.5",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
